<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="iniciar">Iniciar Sensores</string>
    <string name="detener">Detener Sensores</string>
    <string name="Acelerometer">ACCELEROMETER</string>
    <string name="Proximity">PROXIMITY</string>
    <string name="Gyroscope">GYROSCOPE</string>
    <string name="limpio">Limpiar</string>

</resources>
